# cpp-sample-project

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  main.cpp  test.cpp  vcpkg.json
.github/workflows/: clang-format.yml  testing.yml
